2007-08-13  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/robots.txt: put a robots.txt in new installs
	which discourages robot access to all large dynamically-generated
	pages. The intention is that the index page and the 'about' page
	are the only ones which should be crawlable.
	* buildbot/scripts/runner.py (Maker.public_html): same
	(createMaster): same
	* setup.py: ship index.html and robots.txt in source distributions

	* buildbot/status/web/waterfall.py: add 'refresh' query arg, to
	activate automatic reloading of the page (using a meta Refresh:
	tag). Closes #69.
	(WaterfallHelp): new page to explain all the nifty query arguments
	you can use on the Waterfall, along with forms to set them for
	you. From this page, you can add filters for builder=, branch=,
	show_events=, as well as turning on reload=.
	(WaterfallStatusResource.buildGrid): new query args: last_time=,
	first_time=, show_time=, num_events= . The old show= is still
	accepted, but the new builder= is preferred. We ignore empty
	branch= arguments, to make the WaterfallHelp form easier to
	implement.
	(WaterfallStatusResource.head): new method to add text to the
	<head> of the page.
	* buildbot/status/web/base.py (HtmlResource.content): use head()
	* buildbot/status/web/baseweb.py (OneLinePerBuild.body): ignore
	empty branch= arguments
	(OneLinePerBuildOneBuilder.body): same

2007-08-12  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/waterfall.py (WaterfallStatusResource): add
	new query args: 'last_time' is a timestamp of the top-most event
	on the display, 'first_time' is a timestamp for the bottom-most
	event. 'show_time' is the difference between them, and overrides
	'first_time'. 'num_events' puts an upper limit on the number of
	timestamps that will be displayed on the left hand edge.
	(WaterfallStatusResource.body): add a 'next page' link to the
	bottom, which shows the events that come just after those shown on