@@ -11,6 +11,14 @@
 <ul>
   <li>the <a href="waterfall">Waterfall Display</a> will give you a
   time-oriented summary of recent buildbot activity.</li>
+
+  <li><a href="one_line_per_build">Recent Builds</a> are summarized here.</li>
+
+  <li><a href="buildslaves">Buildslave</a> information</li>
+  <li><a href="changes">ChangeSource</a> information.</li>
+
+  <br />
+  <li><a href="about">About this Buildbot</a></li>
 </ul>
 
 
